--- a/styles/style.css
+++ b/styles/style.css
@@ -4,10 +4,6 @@
   box-sizing: border-box;
 }
 
-html {
-  block-size: 100%;
-}
-
 .page {
   margin: auto;
   color: #fff;
@@ -15,7 +11,7 @@ html {
   font-size: 18px;
   background-color: #1b1919;
   inline-size: 1200px;
-  block-size: 100%;
+  height: 100%;
 }
 
 h1,
@@ -38,10 +34,14 @@ fieldset {
 
 .hover:hover {
   text-decoration: underline;
+  cursor: pointer;
 }
 
-*:focus {
-  border: 1px solid #fff;
+.search-form__label:focus,
+.button:focus,
+.content__video-card:focus {
+  box-sizing: border-box;
+  outline: 1px solid #fff;
 }
 
 .search-form__label:has(:focus-visible) {
@@ -58,10 +58,10 @@ ol {
   width: 1px;
   height: 1px;
   margin: -1px;
-  padding: 0;
   border: 0;
-  clip: rect(0 0 0 0); /* это свойство обрезает видимую область до нулевого значения */
+  padding: 0;
   overflow: hidden;
+  clip: rect(0 0 0 0);
 } 
 
 a {
@@ -85,17 +85,12 @@ a {
   background-color: #6b6b6b;
 }
 
-.page {
-  display: flex;
-  justify-content: center;
-}
-
 .content {
   display: flex;
   justify-content: space-between;
+  align-content: center;
   align-items: end;
   gap: 30px;
-  width: 1140px;
   margin: 133px 30px;
 }
 
@@ -109,8 +104,11 @@ a {
   margin-bottom: 16px;
 }
 
-.result__video-container video{
+.result__video {
+  height: 386px;
   width: 100%;
+  object-fit: cover;
+  object-position: center;
 }
 
 .search-form {
@@ -121,8 +119,8 @@ a {
 
 .search-form__label {
   display: flex;
-  align-items: center;
   flex-direction: row;
+  align-items: center;
 }
 
 .search-form__fieldset {
@@ -130,22 +128,22 @@ a {
 }
 
 .search-form__fieldset-title {
-  font-size: 18px;
-  font-weight: 400;
   margin-bottom: 5px;
+  font-weight: 400;
+  font-size: 18px;
 }
 
 .search-form__textfield {
-  outline: none;
+  width: 225px;
   border-top: 1px solid #fff;
   border-right: none;
   border-bottom: 1px solid #fff;
   border-left: none;
-  background-color: transparent;
+  outline: none;
   color: rgb(255, 255, 255, 0.7);
   font-family: 'Fira Sans Condensed', sans-serif;
   font-size: 18px;
-  width: 225px;
+  background-color: transparent;
 }
 
 .search-form__textfield:active {
@@ -161,10 +159,14 @@ a {
 .search-form__pseudo-checkbox {
   position: relative;
   display: block;
-  height: 19px;
   width: 19px;
-  border: 1px solid #fff;
+  height: 19px;
   margin-right: 5px;
+  border: 1px solid #fff;
+}
+
+.search-form__label:active {
+  text-decoration: none;
 }
 
 .search-form__checkbox:active + .search-form__pseudo-checkbox::before {
@@ -173,7 +175,7 @@ a {
   width: 15px;
   height: 15px;
   margin: 1px;;
-  background-color:#fff
+  background-color:#fff;
 }
 
 .search-form__checkbox:checked + .search-form__pseudo-checkbox::before {
@@ -182,23 +184,27 @@ a {
   width: 15px;
   height: 15px;
   margin: 1px;;
-  background-color:#fff
+  background-color:#fff;
 }
 
 .button {
-  height: 34px;
-  background-color: inherit;
+  min-height: 34px;
+  padding: 6px auto;
   border: 1px solid #fff;
-  font-weight: 700;
   color: #fff;
-  text-align: center;
   font-family: 'Fira Sans Condensed', sans-serif;
+  font-weight: 700;
   font-size: 18px;
+  background-color: inherit;
+}
+
+.button:active {
+  text-decoration: none;
 }
 
 .search-form__submit-button {
-  width: 194px;
   align-self: flex-end;
+  width: 194px;
 }
 
 .content__details {
@@ -207,10 +213,11 @@ a {
 }
 
 .content__list {
+  padding: 2px 2px 0 2px;
   position: relative;
   display: flex;
   flex-direction: column;
-  gap: 30px;
+  gap: 25px;
   height: 300px;
   overflow: auto;
 }
@@ -219,22 +226,36 @@ a {
   margin-bottom: 26px;
   font-family: Oswald, sans-serif;
   font-size: 75px;
+  line-height: 0.9;
   text-transform: uppercase;
-  line-height: 1;
 }
 
 .content__video-card {
+  padding: 1px 0 1px 1px;
   display: flex;
+  justify-content: space-between;
   width: 100%;
 }
 
+.content__card-link {
+  display: block;
+}
+
+.content__card-link_current {
+  background-color: #505050;
+}
+
+.content__list-item:active {
+  text-decoration: none;
+}
+
 .content__video-card-description-container {
-  width: 50%;
+  width: 200px;
 }
 
 .content__video-card-title {
-  font-size: 30px;
   font-family: Oswald, sans-serif;
+  font-size: 30px;
   text-transform: uppercase;
 }
 
@@ -242,12 +263,12 @@ a {
   color: #505050;
 }
 
-.content__video-card img {
-  width: 50%;
-}
-
-.content__list-item {
-  padding-left: 2px;
+.content__video-card-thumbnail {
+  margin: 2px 0;
+  height: 103px;
+  width: 200px;
+  object-fit: cover;
+  object-position: center;
 }
 
 .more-button {
