--- a/styles/style.css
+++ b/styles/style.css
@@ -35,15 +35,6 @@ fieldset {
   padding: 0;
 }
 
-.active:active {
-  background-color: #505050;
-}
-
-.hover:hover {
-  text-decoration: underline;
-  cursor: pointer;
-}
-
 .search-form__label:focus,
 .button:focus,
 .content__card-link:focus {
@@ -92,10 +83,11 @@ a {
 }
 
 .content {
+  width: 1140px;
   display: flex;
   justify-content: space-between;
   align-items: end;
-  gap: 27px;
+  gap: 30px;
   margin: 15px 30px;
 }
 
@@ -107,11 +99,13 @@ a {
 .result__video-container {
   position: relative;
   margin-bottom: 16px;
+  width: 710px;
+  height: 386px;
 }
 
 .result__video {
   width: 100%;
-  height: 386px;
+  height: 100%;
   object-fit: cover;
   object-position: center;
 }
@@ -120,12 +114,18 @@ a {
   display: flex;
   justify-items: start;
   justify-content: space-between;
-}
+} 
 
 .search-form__label {
+  margin-bottom: 4px;
   display: flex;
   flex-direction: row;
   align-items: center;
+}
+
+.search-form__label:has(span:hover) {
+  text-decoration: underline;
+  cursor: pointer;
 }
 
 .search-form__fieldset {
@@ -203,8 +203,14 @@ a {
 }
 
 .button:active {
+  background-color: #505050;
   outline: none;
   text-decoration: none;
+}
+
+.button:hover {
+  text-decoration: underline;
+  cursor: pointer;
 }
 
 .search-form__submit-button {
@@ -214,17 +220,19 @@ a {
 
 .content__details {
   flex-grow: 1;
-  width: 410px;
+  width: 400px;
 }
 
 .content__list {
   position: relative;
   display: flex;
   flex-direction: column;
-  gap: 30px;
   height: 300px;
-  padding: 0 3px;
   overflow: auto;
+}
+
+.content__list-item {
+  margin-bottom: 30px;
 }
 
 .title {
@@ -247,10 +255,16 @@ a {
 }
 
 .content__card-link:active {
+  background-color: #505050;
   outline: none;
   padding-top: 2px;
   padding-bottom: 2px;
   text-decoration: none;
+}
+
+.content__card-link:hover {
+  text-decoration: underline;
+  cursor: pointer;
 }
 
 .content__card-link_current {
@@ -258,10 +272,13 @@ a {
 }
 
 .content__video-card-description-container {
-  width: 205px;
+  width: 213px;
 }
 
 .content__video-card-title {
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
   margin-top: 2px;
   margin-bottom: 4px;
   font-family: Oswald, sans-serif;
@@ -271,6 +288,8 @@ a {
 }
 
 .content__video-card-description {
+  text-overflow: ellipsis;
+  overflow: hidden;
   line-height: 16px;
 }
 
@@ -279,7 +298,7 @@ a {
 }
 
 .content__video-card-thumbnail {
-  width: 205px;
+  width: 200px;
   height: 103px;
   object-fit: cover;
   object-position: center;
